@@ -1,9 +1,9 @@
 import os
 import getpass
 
-APPLICATION_VERSION = 4.01
+APPLICATION_VERSION = 4.02
 OLD_APPLICATION_VERSION = "0320"
-PREVIOUS_APPLICATION_VERSION = "0400"
+PREVIOUS_APPLICATION_VERSION = "0401"
 
 FONT_SANS_SERIF = "Arial"
 FONT_MONO_SPACE = "Courier"
